ava-rs/tui/src/chatwidget/tests/snapshots/ava_tui__chatwidget__tests__slash_commands__transcript_copy_unconfirmed.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Ava to do anything

  Copy unconfirmed; /export saves chat
